--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,12 @@ body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
   /* background: #f0f4f3; */
-  background: #d4e4cc;
+  /* background: #d4e4cc; */
+  background-image: url("https://tamtrathai.com.vn/wp-content/uploads/2022/10/4-nguon-goc-tra-.jpg");
   min-height: 100vh;
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat; /* Ngăn ảnh lặp lại */
 }
 
 .chat-app {
